# FastAPI-template

./: Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
src/: server.py
src/routers/: health.py
