[tool.poetry]
name = "fastapi-template"
version = "0.1.0"
description = "FastAPI template application"
authors = ["krstef"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]
black = "^21.11b1"
isort = "^5.10.1"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py39']

[tool.mypy]
python_version = 3.9
warn_return_any = true
disallow_any_expr = false

[tool.mypy-uvicorn]
ignore_missing_imports = true